--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,11 @@
   <meta charset="utf-8">
   <title>Pairist</title>
 
-  <link rel="shortcut icon" type="image/png" href="/static/favicon.png" />
+  <link rel="shortcut icon" type="image/png" href="<%= webpackConfig.output.publicPath %>favicon.png" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
   <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet">
   <link rel="stylesheet" href="//cdn.materialdesignicons.com/2.0.46/css/materialdesignicons.min.css">
 
-  <link rel="manifest" href="/static/manifest.json">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -19,4 +18,3 @@
   <!-- built files will be auto injected -->
 </body>
 
-</html>
