--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
   <link rel="shortcut icon" type="image/png" href="<%= webpackConfig.output.publicPath %>favicon.png" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
-  <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet">
+  <link href="https://unpkg.com/vuetify@1.0.19/dist/vuetify.min.css" rel="stylesheet">
   <link rel="stylesheet" href="//cdn.materialdesignicons.com/2.1.99/css/materialdesignicons.min.css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
