--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+  <script>
+    window.jdenticon_config = {
+      replaceMode: "observe"
+    };
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/jdenticon@2.1.0" async></script>
 </head>
 
 <body>
